Bug do link do Deploy resolvido

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>Natielle Bacelar</h1>
-      <p>Dev em construção | Corajosa, criativa, objetiva</p>
+      <p>Dev em construção | Focada, criativa, objetiva</p>
     </header>
 
     <section>
@@ -21,7 +21,7 @@
       </p>
       <p>
         Tenho nível de inglês B2 (não certificado), experiência com HTML, CSS,
-        JavaScript e estou aprendendo C#. Desenvolvo pequenos projetos com
+        JavaScript e estou aprendendo Java. Desenvolvo pequenos projetos com
         atenção ao design e à funcionalidade.
       </p>
     </section>
@@ -36,7 +36,7 @@
       <a href="https://github.com/natbacx/To-do-List" target="_blank"
         >📁 Lista de Tarefas - Repositório</a
       >
-      <a href="https://natbacx.github.io/To-do-List/t/" target="_blank"
+      <a href="https://natbacx.github.io/To-do-List/" target="_blank"
         >🚀 Lista de Tarefas - Deploy</a
       >
       <!-- Adicione mais projetos aqui -->
