--- a/index.html
+++ b/index.html
@@ -7,53 +7,78 @@
   </head>
 
   <body>
-    <header>
-      <h1>Natielle Bacelar</h1>
-      <p>Dev em construção | Focada, criativa, objetiva</p>
-    </header>
+    <nav>
+      <ul>
+        <li><a href="#sobre">Sobre mim</a></li>
+        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+    <div class="decor decor1">
+      <img src="./assets/decor1.png" alt="Decoração 1" />
+    </div>
+    <div class="decor decor2">
+      <img src="./assets/decor2.png" alt="Decoração 2" />
+    </div>
+    <div class="decor decor3">
+      <img src="./assets/decor3.png" alt="Decoração 3" />
+    </div>
+    <div class="decor decor4">
+      <img src="./assets/decor4.png" alt="Decoração 4" />
+    </div>
+    <div class="decor decor5">
+      <img src="./assets/decor5.png " alt="Decoração 5" />
+    </div>
 
-    <section>
+
+    
+    <section id="sobre" class="sobre">
+      <div class="sobre-container">
+        <div class="sobre-img">
+          <img src="./assets/profilepicture.png" alt="Profile Picture" />
+        </div>
+      <div class="sobre-texto">
+        <h1>Natielle Bacelar</h1>
       <h2>Sobre mim</h2>
       <p>
-        Estudante de Análise e Desenvolvimento de Sistemas, curiosa por
+        Estudante de Análise e Desenvolvimento de Sistemas, cursiosa por
         natureza, apaixonada por resolver problemas reais com código. Busco
-        atuar na área tech, com foco em desenvolvimento web.
+        atuar na área tech, com foco em desenvolvimento de software.
       </p>
       <p>
         Tenho nível de inglês B2 (não certificado), experiência com HTML, CSS,
         JavaScript e estou aprendendo Java. Desenvolvo pequenos projetos com
         atenção ao design e à funcionalidade.
       </p>
+      </div>
     </section>
 
-    <section class="projetos">
+    <section id="projetos" class="projetos">
       <h2>Projetos</h2>
       <h3>📋 To-do-list</h3>
       <p>
-        Aplicação feita com HTML, CSS e JavaScript. Permite adicionar, editar e
-        excluir tarefas.
+        Aplicação feita com HTML, CSS, JavaScript e uma ajudinha do Bootstrap.
+        Permite adicionar, editar e excluir tarefas (por enquanto 👀).
       </p>
       <a href="https://github.com/natbacx/To-do-List" target="_blank"
         >📁 Lista de Tarefas - Repositório</a
       >
-      <a href="https://natbacx.github.io/To-do-List/" target="_blank"
+      <a href=" https://natbacx.github.io/To-do-List/" target="_blank"
         >🚀 Lista de Tarefas - Deploy</a
       >
       <!-- Adicione mais projetos aqui -->
     </section>
 
-    <section class="contato">
+    <section id="contato" class="contato">
       <h2>Contato</h2>
-      <p>Me chama no e-mail: <strong>natiellebacelarr@email.com</strong></p>
+      <p>Me chama no e-mail: <strong>natiellebacelarr@gmail.com</strong></p>
       <p>
         Ou me encontra no
-        <a
-          href="https://www.linkedin.com/in/natiellebacelar"
-          target="_blank"
-          style="color: #00ffaa"
+        <a href="https://www.linkedin.com/in/natiellebacelar" target="_blank"
           >LinkedIn</a
         >
       </p>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
