--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
 
-    
+
     <section id="sobre" class="sobre">
       <div class="sobre-container">
         <div class="sobre-img">
@@ -71,7 +71,11 @@
 
     <section id="contato" class="contato">
       <h2>Contato</h2>
-      <p>Me chama no e-mail: <strong>natiellebacelarr@gmail.com</strong></p>
+       <a href="mailto:natiellebacelarr@gmail.com?subject=Olá!&body=Olá, vi seu portfólio e gostaria de entrar em contato 😊" class="email-link">
+  <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Email" class="email-icon">
+  natiellebacelarr@gmail.com
+</a>
+
       <p>
         Ou me encontra no
         <a href="https://www.linkedin.com/in/natiellebacelar" target="_blank"
