--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         atuar na área tech, com foco em desenvolvimento de software.
       </p>
       <p>
-        Tenho nível de inglês B2 (não certificado), experiência com HTML, CSS,
+        Inglês B2 (intermediário-avançado), experiência com HTML, CSS,
         JavaScript e estou aprendendo Java. Desenvolvo pequenos projetos com
         atenção ao design e à funcionalidade.
       </p>
